@@ -14,3 +14,5 @@ conda
 cwl
 snakemake
 snakefile
+envmodules
+envvars
