@@ -14,10 +14,11 @@ Feature: Inspection: SmkWildcardNotDefinedInspection
     """
     When I check highlighting errors
     Examples:
-      | section    | usage |
-      | rule       | input |
-      | rule       | group |
-      | checkpoint | input |
+      | section    | usage      |
+      | rule       | input      |
+      | rule       | group      |
+      | rule       | envmodules |
+      | checkpoint | input      |
 
   Scenario Outline: Cannot parse wildcard defining section
     Given a snakemake project
