@@ -1,0 +1,5 @@
+rule rule_332:
+    envmodules:
+        config["FOO"],
+        config["BOO"]
+    script: ""
